--- a/demo3.html
+++ b/demo3.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:white">
 	<div id="container"><a href="http://www.macromedia.com/go/getflashplayer">Get the Flash Player</a> to see this player.</div>
-	<script type="text/javascript" src="swfobject.js"></script>
+	<script type="text/javascript" src="swfobject3.js"></script>
 	<script type="text/javascript">
 		var so1 = new SWFObject("demo.swf", "ads", "800", "605", "8", "#ffffff");
 		so1.addParam("allowfullscreen", "true");
